--- a/app/views/account/index.html
+++ b/app/views/account/index.html
@@ -38,7 +38,7 @@
 		<form action="/create-event" method="get" class="form">
 			<br>
 			<div class="form-group">
-				<input type="submit" class="button" value="Create new event">
+				<input type="submit" class="button-secondary" value="Create new event">
 			</div>
 			<br>
 			<br>
