--- a/app/views/create-event/summary.html
+++ b/app/views/create-event/summary.html
@@ -78,12 +78,7 @@
 				  <dt class="cya-question">
 					  Venue
 				  </dt>
-				  <dd class="cya-answer">
-					  {{ data['address-venue-name'] }}  <br>
-					  {{ data['address-street'] }}      <br>
-					  {{ data['event-town'] }}          <br>
-					  {{ data['event-postcode'] }}
-				  </dd>
+				  <dd class="cya-answer" style="white-space: pre-wrap;">{{ data['full-address-holder'] }}</dd>
 				  <dd class="cya-change ">
 					  <a href="#">
 						  Change<span class="visually-hidden">home address</span>
@@ -117,8 +112,6 @@
 				  </dd>
 			  </div>
 		  </dl>
-
-
 
 
 
