--- a/app/views/create-event/attendees.html
+++ b/app/views/create-event/attendees.html
@@ -13,7 +13,7 @@
 	  <!--  BREADCRUMB  -->
 	  <div class="breadcrumbs">
 		<ol>
-			<li><a href="/account">Account home</a></li>
+			<li><a href="/account">Tickets</a></li>
 		</ol>
 	  </div>
 
@@ -38,7 +38,7 @@
       {% endif %}
 
 	  <h1 class="heading-large" style="margin-top:15px">
-        Attendees
+        Tickets
       </h1>
 
 	  <form action="/create-event/attendee-onwards" method="get" class="form">
@@ -47,12 +47,11 @@
 		  <fieldset class="form-group">
 
 			  {% if errorAttendee %}
-			  <div class="form-group  form-group-error">
-				  {% endif %}
+			  	<div class="form-group  form-group-error">
+			  {% endif %}
 
 				  <label class="form-label-bold">
-					  Number of attendee places
-
+					  Quantity of tickets
 					  {% if errorAttendee %}
 						  <span class="error-message">
 							  Error message about personal details goes here
@@ -60,25 +59,43 @@
 					  {% endif %}
 				  </label>
 
-
-
 				  <div class="form-date">
 					  <!-- <p class="form-hint">For example, 31 3 1980</p>  -->
 					  <div class="form-group form-group-day">
 						  <input class="form-control  {% if errorAttendee %} form-control-error {% endif %}"
 								 id="attendee-quantity" name="attendee-quantity" type="number" pattern="[0-9]*" >
 					  </div>
-
 				  </div>
 
-				  {% if errorAttendee %}
-			  </div>
+			  {% if errorAttendee %}
+			  	</div>
 			  {% endif %}
 
 		  </fieldset>
 
 
-			  <div class="form-group" style="margin-top:0px">
+
+		  <fieldset class="form-group">
+
+			  <label class="form-label-bold">
+				  When all tickets are gone
+			  </label>
+
+			  <div class="multiple-choice">
+				  <input id="radio-close-registrations" type="radio" name="radio-group" value="close-registrations" checked="checked">
+				  <label for="radio-close-registrations">Close registration</label>
+			  </div>
+			  <div class="multiple-choice">
+				  <input id="radio-use-waiting-list" type="radio" name="radio-group" value="use-waiting-list">
+				  <label for="radio-use-waiting-list">Add registration to a waiting list.</label>
+			  </div>
+
+		  </fieldset>
+
+
+
+
+			  <div class="form-group" style="margin-top:20px">
 				  <input type="submit" class="button" value="Continue">
 				  <p style="margin-top:30px"><a href="/create-event/summary">There is no limit</a></p>
 			  </div>
