--- a/app/views/create-event/venue.html
+++ b/app/views/create-event/venue.html
@@ -54,7 +54,7 @@
 		  </div>
 
 
-		  <textarea class="form-control" name="full-address-holder" id="full-address-holder" rows="5" style="width: 100%;"></textarea>
+		  <textarea class="form-control" name="full-address-holder" id="full-address-holder" rows="5" style="width: 100%; display: none;"></textarea>
 
 
 
