some fixes on the event tickets

--- a/app/views/create-event/attendees.html
+++ b/app/views/create-event/attendees.html
@@ -82,11 +82,11 @@
 			  </label>
 
 			  <div class="multiple-choice">
-				  <input id="radio-close-registrations" type="radio" name="radio-group" value="close-registrations" checked="checked">
+				  <input id="radio-close-registrations" type="radio" name="radio-group-ticket-gone" value="close-registrations" checked="checked">
 				  <label for="radio-close-registrations">Close registration</label>
 			  </div>
 			  <div class="multiple-choice">
-				  <input id="radio-use-waiting-list" type="radio" name="radio-group" value="use-waiting-list">
+				  <input id="radio-use-waiting-list" type="radio" name="radio-group-ticket-gone" value="use-waiting-list">
 				  <label for="radio-use-waiting-list">Add registration to a waiting list.</label>
 			  </div>
 
@@ -95,10 +95,10 @@
 
 
 
-			  <div class="form-group" style="margin-top:20px">
-				  <input type="submit" class="button" value="Continue">
-				  <p style="margin-top:30px"><a href="/create-event/summary">There is no limit</a></p>
-			  </div>
+		  <div class="form-group" style="margin-top:20px">
+			  <input type="submit" class="button" value="Continue">
+			  <p style="margin-top:30px"><a href="/create-event/summary">There is no limit</a></p>
+		  </div>
 
 
 
