--- a/app/views/create-event/summary.html
+++ b/app/views/create-event/summary.html
@@ -102,9 +102,37 @@
 
 			  <div>
 				  <dt class="cya-question">
+					  When all ticket are gone
+				  </dt>
+				  <dd class="cya-answer">
+					  {{ data['after-tickets-gone'] }}
+				  </dd>
+				  <dd class="cya-change">
+					  <a href="#">
+						  Change<span class="visually-hidden"> contact details</span>
+					  </a>
+				  </dd>
+			  </div>
+
+			  <div>
+				  <dt class="cya-question">
 					  Event description
 				  </dt>
 				  <dd class="cya-answer"   style="white-space: pre-wrap;">{{ data['event-description'] }}</dd>
+				  <dd class="cya-change">
+					  <a href="#">
+						  Change<span class="visually-hidden"> contact details</span>
+					  </a>
+				  </dd>
+			  </div>
+
+			  <div>
+				  <dt class="cya-question">
+					  Main image
+				  </dt>
+				  <dd class="cya-answer">
+					  <img src="/public/images/exportingheroimagesmall.jpg" style="width:240px;height:100px;">
+				  </dd>
 				  <dd class="cya-change">
 					  <a href="#">
 						  Change<span class="visually-hidden"> contact details</span>
