bus fixes to tickets page

--- a/app/views/create-event/attendees.html
+++ b/app/views/create-event/attendees.html
@@ -13,7 +13,7 @@
 	  <!--  BREADCRUMB  -->
 	  <div class="breadcrumbs">
 		<ol>
-			<li><a href="/account">Tickets</a></li>
+			<li><a href="/account">Account home</a></li>
 		</ol>
 	  </div>
 
