--- a/app/views/create-event/venue.html
+++ b/app/views/create-event/venue.html
@@ -39,15 +39,14 @@
 			  <div id="edit-address" style="display: none;">
 
 				  <p>
-					  <span id="premise">&nbsp;</span><br>
-					  <span id="street_number">&nbsp;</span>&nbsp;
-					  <span id="route">&nbsp;</span><br>
-					  <span id="postal_town">&nbsp;</span><br>
-					  <span id="postal_code">&nbsp;</span><br>
+					  <span id="premise"></span><br>
+					  <span id="street_number"></span><span id="route"></span><br>
+					  <span id="postal_town"></span><br>
+					  <span id="postal_code"></span><br>
 				  </p>
 
 				  <p>
-					  <a href="/">Edit address</a> or <a href="/">enter a new address</a>
+					  <a href="#">Edit address</a> or <a href="#">enter a new address</a>
 				  </p>
 
 			  </div>
@@ -55,8 +54,6 @@
 
 
 		  <textarea class="form-control" name="full-address-holder" id="full-address-holder" rows="5" style="width: 100%; display: none;"></textarea>
-
-
 
 		  <div class="form-group" style="margin-top:20px">
 			  <input type="submit" class="button" value="Continue">
