--- a/app/views/index.html
+++ b/app/views/index.html
@@ -21,6 +21,16 @@
         Events user testing prototype
       </h1>
 
+
+      <h2 class="heading-medium">August 2017</h2>
+
+      <ul>
+        <li><a href="/scenario-1">Scenario one</a></li>
+      </ul>
+
+
+      <br>
+
       <h2 class="heading-medium">Internal User</h2>
 
 	  <ul>
@@ -29,6 +39,13 @@
 	  </ul>
 
 
+
+      <br>
+      <br>
+
+
+
+      <p><a href="/clear-session">Start fresh</a></p>
 
     </div>
   </div>
